@@ -17,6 +17,7 @@ next:
             - add direct link with tabs
             - add theme selector to grafana images
             - add color selector to grafana images
+            - add axis color option to speedometer
           - internals:
             - move libraries to vendor folder
             - update jquery to 3.3.1
